# imp-assesment

./: .gitignore  README.md  pyproject.toml
data/raw/: schools.csv  students.csv  students_dirty.csv  teachers.csv
docker-compose/: docker-compose.yaml
docker-compose/config/users.d/: default-user.xml
script/: etl_pipeline.py  generate_data.py  load_data.py  simulate_problem.py
sql-query/: create-table.sql  sql-analysis.sql
