[project]
name = "imp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.14.1",
    "cryptography>=46.0.5",
    "faker>=40.11.0",
    "pandas>=3.0.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.48",
]
